--- a/Exercises/Math/Makefile
+++ b/Exercises/Math/Makefile
@@ -1,4 +1,6 @@
-out.txt : main.exe
-	mono main.exe > out.txt
-main.exe : main.cs
-	mcs main.cs
+Out.txt : main.exe
+	mono main.exe > Out.txt
+sfuns.dll : sfuns.cs
+	mcs -target:library -out:sfuns.dll sfuns.cs
+main.exe : main.cs sfuns.dll
+	mcs main.cs -reference:sfuns.dll -out:main.exe
