--- a/Exercises/Vec/Makefile
+++ b/Exercises/Vec/Makefile
@@ -3,4 +3,4 @@ Out.txt : main.exe
 vec.dll : vec.cs
 	mcs vec.cs -target:library -out:vec.dll vec.cs
 main.exe : main.cs vec.dll
-	mcs -target:exe -out:main.exe -reference:vec.dll vec.cs
+	mcs main.cs -reference:vec.dll -out:main.exe
