Integrator part A & B done

--- a/Homework/integration/Makefile
+++ b/Homework/integration/Makefile
@@ -1,5 +1,10 @@
+.PHONY : all
+all : erf.svg Out.txt
 
-Out.txt : main.exe 
+erf.svg : erf.gpi erf.txt
+	gnuplot $<
+
+Out.txt erf.txt : main.exe 
 	mono main.exe > Out.txt
 
 main.exe : main.cs matrix.dll
@@ -7,3 +12,11 @@ main.exe : main.cs matrix.dll
 
 matrix.dll : integrator.cs ../classes/*.cs
 	mcs -target:library -out:$@ $^
+
+.PHONY : pyint
+pyint : pythoncc.py
+	python3 pythoncc.py
+
+.PHONY : clean
+clean : 
+	rm -f *.txt *.exe *.svg
