Monte Carlo part b

--- a/Homework/monte-carlo/Makefile
+++ b/Homework/monte-carlo/Makefile
@@ -1,8 +1,13 @@
+.PHONY : 
+all : partb.svg plainmc.svg Out.txt
+
+partb.svg : partb.gpi qintg.txt pintg.txt
+	gnuplot $<
 
 plainmc.svg : plainmc.gpi unitcirc.txt
 	gnuplot $<
 
-Out.txt unitcirc.txt : main.exe 
+Out.txt unitcirc.txt qintg.txt pintg.txt : main.exe 
 	mono main.exe > Out.txt
 
 main.exe : main.cs matrix.dll
