Roots part b done

--- a/Homework/roots/Makefile
+++ b/Homework/roots/Makefile
@@ -1,5 +1,13 @@
+.PHONY : 
+all : Out.txt wavefunc.svg convergence.svg
 
-Out.txt : main.exe
+convergence.svg : convergence.gpi acc.txt eps.txt rmin.txt rmax.txt
+	gnuplot $<
+
+wavefunc.svg : wavefunc.gpi wavefunc.txt
+	gnuplot $<
+
+Out.txt wavefunc.txt : main.exe
 	mono main.exe > Out.txt
 
 main.exe : main.cs matrix.dll 
@@ -8,3 +16,6 @@ main.exe : main.cs matrix.dll
 matrix.dll : ../classes/*.cs roots.cs
 	mcs -target:library -out:$@ $^
 
+.PHONY : 
+clean : 
+	rm -f *.svg *.txt *.exe *.dll
