--- a/Homework/ann/Makefile
+++ b/Homework/ann/Makefile
@@ -1,10 +1,11 @@
 .PHONY : 
-all : plotA.svg plotB.svg Out.txt
+all : plotA.svg plotB.svg plotC.svg Out.txt
 
 .PHONY :
 open : 
 	xdg-open plotA.svg
 	xdg-open plotB.svg
+	xdg-open plotC.svg
 
 plotA.svg : plota.gpi annvalues.txt simvalues.txt trainingpoints.txt
 	gnuplot $<
@@ -12,13 +13,16 @@ plotA.svg : plota.gpi annvalues.txt simvalues.txt trainingpoints.txt
 plotB.svg : plotb.gpi trainingpointsB.txt annderivs.txt derivpoints.txt
 	gnuplot $<
 
-Out.txt : main.exe
+plotC.svg : plotc.gpi diffeq.txt
+	gnuplot $<
+
+Out.txt diffeq.txt trainingpoints.txt trainingspointsB.txt : main.exe
 	mono main.exe > Out.txt
 
 main.exe : main.cs nummethods.dll
 	mcs main.cs -reference:nummethods.dll
 
-nummethods.dll : ../classes/*.cs minimisation.cs ann.cs
+nummethods.dll : ../classes/*.cs minimisation.cs integrator.cs ann.cs
 	mcs -target:library -out:$@ $^
 
 .PHONY : 
