evd part c begun

--- a/Homework/eigenvalue-decomp/Makefile
+++ b/Homework/eigenvalue-decomp/Makefile
@@ -1,32 +1,44 @@
 DR = 2 3 4 5 6 7 8 9 10
 RMAX = 2 3 4 5 6 7 8 9 10
 
-.PHONY: 
-all : convergence.svg swavefunction.svg Out.txt
+all : Out.txt swavefunction.svg convergence.svg diagtimes.txt
 
-.PHONY:
 open : 
 	xdg-open convergence.svg
 	xdg-open swavefunction.svg
 
-convergence.svg : conv.gp fixeddr.txt fixedrmax.txt
-	gnuplot $<
+swavefunction.svg : swave1.txt swave2.txt
+	gnuplot swave.gpi
 
-swavefunction.svg : swave.gp swave1.txt swave2.txt
-	gnuplot $<
+convergence.svg : fixeddr.txt fixedrmax.txt
+	gnuplot conv.gpi
 
-Out.txt fixeddr.txt fixedrmax.txt swave1.txt swave2.txt : main.exe
-	mono main.exe -partA > Out.txt
-	mono main.exe -partB > Out.txt
-	rm -f fixeddr.txt fixedrmax.txt
-	for i in $(RMAX) ; do \
-		mono main.exe -rmax:$$i -dr:5 >> fixeddr.txt ; \
-	done
-	for i in $(DR) ; do \
-		mono main.exe -rmax:5 -dr:$$i >> fixedrmax.txt ; \
-	done
+Out.txt : main.exe
+	mono main.exe -partA >> Out.txt
+	mono main.exe -partB >> Out.txt
+	mono main.exe -partC >> Out.txt
+
+swave1.txt swave2.txt : main.exe 
 	mono main.exe -wavefunc:1 > swave1.txt
 	mono main.exe -wavefunc:2 > swave2.txt
+	
+fixeddr.txt fixedrmax.txt : main.exe
+	$(MAKE) run_clean
+	$(MAKE) run_parallel
+
+diagtimes.txt : main.exe 
+	mono main.exe -partCtest > diagtimes.txt
+
+run_clean : 
+	rm -f fixeddr.txt fixedrmax.txt
+
+run_parallel : 
+	for i in $(RMAX) ; do \
+		mono main.exe -rmax:$$i -dr:5 >> fixeddr.txt ; \
+	done & 
+	for i in $(DR) ; do \
+		mono main.exe -rmax:5 -dr:$$i >> fixedrmax.txt ; \
+	done &
 
 main.exe : main.cs matrix.dll
 	mcs main.cs -reference:matrix.dll -out:main.exe
@@ -34,6 +46,5 @@ main.exe : main.cs matrix.dll
 matrix.dll : ../classes/vector.cs ../classes/matrix.cs jacobi_diag.cs
 	mcs -target:library -out:$@ $^
 
-.PHONY : clean
 clean : 
 	rm *.dll *.exe *.txt
