Updated and checked exercises

--- a/Exercises/epsilon/Makefile
+++ b/Exercises/epsilon/Makefile
@@ -1,6 +1,7 @@
 Out.txt : machineepsilon.exe
 	mono machineepsilon.exe > Out.txt
-epsilon.exe : machineepsilon.cs
+
+machineepsilon.exe : machineepsilon.cs
 	mcs machineepsilon.cs
 clean: 
 	rm -f Out.txt machineepsilon.exe
