--- a/Exercises/hello/Makefile
+++ b/Exercises/hello/Makefile
@@ -1,6 +1,6 @@
 out.txt : hello.exe
-	mono hello.exe > out.txt
+	mono hello.exe > Out.txt
 hello.exe : hello.cs
 	mcs hello.cs
 clean:
-	rm -f out.txt hello.exe
+	rm -f Out.txt hello.exe
