--- a/Exam/Makefile
+++ b/Exam/Makefile
@@ -1,6 +1,8 @@
+TIME = time --portability --append --output $@
 
-Out.txt : main.exe 
-	mono main.exe > Out.txt
+Out.txt : main.exe pcubas.py
+	$(TIME) mono $< >> $@
+	$(TIME) python3 pcubas.py >> $@
 
 main.exe : main.cs integration.dll
 	mcs main.cs -reference:integration.dll
@@ -12,7 +14,3 @@ integration.dll : cubature.cs
 clean : 
 	rm -f *.txt *.exe *.dll
 
-fastpush : 
-	git add --all
-	git commit -am "fast push"
-	git push
