--- a/Homework/ode/Makefile
+++ b/Homework/ode/Makefile
@@ -1,17 +1,23 @@
 
-lotka.svg : lotka.gpi diffeq3.txt
+.PHONY: 
+all : PartA.svg Lotka.svg Out.txt
+
+PartA.svg : parta.gpi diffeq1.txt diffeq2.txt
+	gnuplot $<
+
+Lotka.svg : lotka.gpi diffeq3.txt
 	gnuplot $<
 
 diffeq.svg : diffeq.gpi diffeq1.txt diffeq2.txt
 	gnuplot $<
 
 Out.txt diffeq1.txt diffeq2.txt diffeq3.txt : main.exe
-	mono main.exe
+	mono main.exe > Out.txt
 
 main.exe : main.cs matrix.dll
 	mcs main.cs -reference:matrix.dll -out:main.exe
 
-matrix.dll : ../classes/*.cs ode.cs
+matrix.dll : ../classes/[!ode]*.cs ode.cs
 	mcs -target:library -out:$@ $^
 
 .PHONY : clean
